Crash when assign an empty as a LoD #39509

Closed
opened 2014-03-30 04:41:20 +02:00 by Alexandre Scandelari Wolf · 6 comments

System Information
Windows 7 64-bit, Nvidia GeForce GTX 760

Blender Version
Broken: 2.70 #19e627c

Short description of error
When you assign an Empty as a Level of Detail of an object, then Start the Game Engine far enough (forcing the object to change its Level), Blender crashes.

Exact steps for others to reproduce the error
1 - Change the Engine to 'Blender Game';
2 - Add an Empty;
3 - Add a Level of Detail to the default Cube, and assign the Empty;
4 - Zoom out enough to change the Cube LoD;
5 - Start the game ('P');

**System Information** Windows 7 64-bit, Nvidia GeForce GTX 760 **Blender Version** Broken: 2.70 #19e627c **Short description of error** When you assign an Empty as a Level of Detail of an object, then Start the Game Engine far enough (forcing the object to change its Level), Blender crashes. **Exact steps for others to reproduce the error** 1 - Change the Engine to 'Blender Game'; 2 - Add an Empty; 3 - Add a Level of Detail to the default Cube, and assign the Empty; 4 - Zoom out enough to change the Cube LoD; 5 - Start the game ('P');

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @aleswolf

Added subscriber: @aleswolf

This issue was referenced by blender/blender-addons-contrib@70f089b6f5

This issue was referenced by blender/blender-addons-contrib@70f089b6f5b768b7ee0d6bc98d64a202e99fc22f

This issue was referenced by 70f089b6f5

This issue was referenced by 70f089b6f5b768b7ee0d6bc98d64a202e99fc22f
Daniel Stokes self-assigned this 2014-04-16 04:05:51 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 70f089b6f5.

Closed by commit 70f089b6f5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39509
No description provided.