Fix T39509: Crash when assign an empty as a LoD

Missing check when looking for appropriate LoD